Wed May  3 14:49:09 PDT 2000 Manish Singh <yosh@gimp.org>

	* gimp.m4: help spacing correction

2000-05-03  Michael Natterer  <mitch@gimp.org>

	* app/layers_dialog.c: removed layers_dialog_idle_set_layer_focus()
	because Wolfgang pointed out that it caused bad segfaults. This
	fixes #10139 and #9844. OTOH this brings back the bug that the
	active layers is sometimes not the selected one in the layers
	dialog, grmpf.

	* plug-ins/script-fu/script-fu-scripts.c: small cleanups.

	* plug-ins/gap/README
	* plug-ins/gap/gap_exchange_image.c
	* plug-ins/gap/gap_lib.[ch]
	* plug-ins/gap/gap_main.c
	* plug-ins/gap/gap_mov_dialog.[ch]
	* plug-ins/gap/gap_mov_exec.[ch]
	* plug-ins/gap/gap_navigator_dialog.c: applied a patch from
	Wolfgang Hofer <hof@hotbot.com>.

2000-05-03  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in
	* po/ca.po: added Catalan file

2000-05-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/faxg3/faxg3.c
	* plug-ins/gdyntext/gdyntext.c
	* plug-ins/gdyntext/gdyntext_ui.c: i18n fixes

Wed May  3 02:40:12 CEST 2000  Marc Lehmann <pcg@goof.com>

        * configure.in: Remove $CFLAGS from perl's compiler flags.  This
        should fix the problems when perl's $CC and gimp's $CC are
        different (and is not useful anyway).

        There shouldn't be any major perl build glitches left at this
        moment.

2000-05-02  Michael Natterer  <mitch@gimp.org>

	* app/main.c
	* libgimp/gimp.c: as noticed by Garry, Tim, Raphael and probably
	many others, my latest signal change introduced a Linuxism
	which doesn't compile on any other UNIX system, eek.
	s/SA_NOMASK/SA_NODEFER/ makes it compile and is hopefully
	the last chapter in this saga.

2000-05-02  Tor Lillqvist  <tml@iki.fi>

	* libgimp/gimpmath.h: #elsifdef?

Mon May  1 13:35:46 PDT 2000 Manish Singh <yosh@gimp.org>

	* Made 1.1.21 release (1.2pre)

2000-05-01  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/[r-z]*.c: use gimp_ui_init(). Minor cleanups like