@@ -1,3 +1,8 @@
+2000-05-04  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added modules/cdisplay_highcontrast.c
+	* de.po: updated german translation
+
 2000-05-03  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation
